🐛fix(editor) rare duplicate scrollbar visual when toc is 0 width

--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -141,6 +141,7 @@
 
 ng-scrollbar {
     width: 100%;
+    overflow: hidden;
 }
 
 :host ::ng-deep {
